plugins/kotlin/idea/tests/testData/multiModuleHighlighting/multiplatform/transitive/base_common/common.kt
expect fun <error descr="[NO_ACTUAL_FOR_EXPECT]">foo</error>(): Int